# box-mailer

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  main.py  pyproject.toml
box_mailer/: main.py
tests/: test_box_mailer.py
