[tool.poetry]
name = "box-mailer"
version = "0.1.0"
description = ""
authors = ["Josh Asplund <asplund3@illinois.edu>"]

[tool.poetry.scripts]
box-mailer = 'box_mailer.main:main'

[tool.poetry.dependencies]
python = "^3.8"
boxsdk = "^3.9"
click = "^8.0"

[tool.poetry.group.dev.dependencies]
pylint = "*"
ipython = "*"
ruff = "*"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
src = ["box_mailer"]